# pathokpoint-fastapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.log.1  app.log.2  docker-compose.yml  pyproject.toml  requirements.txt  run.py  seed.py  t.db  t.py  test_db.db
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 556f657d2e8c_.py  67a6b6c02765_slug_is_not_nullable.py  997de0cfedb2_baseline_migration.py  e92e30026256_baseline_migration.py
app/: api_routes.py  main.py
app/api/: address.py  auth.py  author.py  book.py  cart.py  category.py  checkout.py  coupon.py  courier.py  dashboard.py  email.py  image.py  misc.py  order.py  payment.py  payment_gateway.py  publisher.py  review.py  root.py  tag.py  test.py  transaction.py  user.py
app/auth/: hashing.py  jwt_bearer.py  jwt_handler.py
app/config/: database.py  email.py  logging_conf.py  redis.py  settings.py
app/constant/: __init__.py  city.py  condition.py  country.py  cover.py  discount_type.py  gender.py  image.py  image_folder.py  language.py  orderstatus.py  role.py  stocklocation.py
app/controller/: address.py  auth.py  author.py  book.py  cart.py  category.py  checkout.py  coupon.py  courier.py  csv.py  dashboard.py  email.py  exception.py  image.py  misc.py  order.py  otp.py  payment.py  payment_gateway.py  publisher.py  redis.py  review.py  tag.py  transaction.py  user.py  utility.py
app/filter_schema/: author.py  base.py  book.py  category.py  coupon.py  courier.py  order.py  payment_gateway.py  publisher.py  review.py  tag.py  transaction.py  user.py
app/models/: __init__.py  address.py  author.py  base.py  book.py  category.py  coupon.py  courier.py  db_setup.py  genre.py  image.py  meta.py  mixins.py  order.py  payment_gateway.py  publisher.py  review.py  setting.py  shipping_method.py  tag.py  transaction.py  user.py
app/pydantic_schema/: address.py  auth.py  author.py  base.py  book.py  cart.py  category.py  checkout.py  common.py  coupon.py  courier.py  field.py  (+13 more)
dummy/: clean.ipynb  seba-old.csv  seba.csv  seba_clean.csv
(+39 files in other folders)
