[tool.poetry]
name = "pathokpoint fastapi"
version = "0.1.0"
description = "backend for pathokpoint"
authors = ["md salah"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
