[tool.poetry]
name = "pathokpoint fastapi"
version = "0.1.0"
description = "backend for pathokpoint"
authors = ["md salah"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
pydantic-settings = "^2.2.1"
uvicorn = "^0.27.1"
email-validator = "^2.1.0.post1"
asyncpg = "^0.29.0"
bcrypt = "^4.1.2"
python-multipart = "^0.0.9"
pyjwt = "^2.8.0"
python-slugify = "^8.0.4"
cloudinary = "^1.39.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
